# ops-type-simulator

./: .gitignore  CMakeLists.txt  README.md  main.cpp  matrix.cpp  matrix.h  types.h  vector.cpp  vector.h
_ts/: index.ts  package-lock.json  package.json
